# expense-agent

./: README.md
ambient-expense-agent/: Makefile  agents-cli-manifest.yaml  pyproject.toml
ambient-expense-agent/artifacts/grade_results/: results_20260621_014552.html  results_20260621_014552.json  results_20260621_014831.html  results_20260621_014831.json  results_20260621_014913.html  results_20260621_014913.json  results_20260621_015035.html  results_20260621_015035.json  results_20260621_015753.html  results_20260621_015753.json  results_local_fallback.json
ambient-expense-agent/artifacts/traces/: generated_traces.json
ambient-expense-agent/expense_agent/: agent.py  config.py  fast_api_app.py
ambient-expense-agent/submission_frontend/: Dockerfile  main.py  pyproject.toml
ambient-expense-agent/tests/eval/: eval_config.yaml  generate_traces.py  run_local_eval.py
ambient-expense-agent/tests/eval/datasets/: basic-dataset.json
ambient-expense-agent/tests/integration/: test_agent.py  test_agent_runtime_app.py
